--- a/configs/moma_llm_inference.yaml
+++ b/configs/moma_llm_inference.yaml
@@ -12,7 +12,7 @@ datasplit: test  # train / test
 reject_onestep_episodes: false #true
 
 control_freq: 10.0
-num_episodes_per_scene: 1 #25
+num_episodes_per_scene: 25
 cheap: false
 ground_truth_done_decision: false
 # as how many low-level steps to count a magic open action. Reference is 1 low-level step = 0.1m navigation
